<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.detail.DetailActivity">

    <data>
        <variable
            name="fullBeerModel"
            type="dev.marcocattaneo.beerbase.model.FullBeerUiModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/container"
        android:background="@color/colorPrimaryDark"
        app:layoutDescription="@xml/detail_opening"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@{fullBeerModel.name}"
            android:id="@+id/title"
            style="@style/AppTheme.H1"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="@tools:sample/lorem" />
        <TextView
            android:text="@{fullBeerModel.subtitle}"
            android:id="@+id/subtitle"
            style="@style/AppTheme.Body"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="@tools:sample/lorem" />

        <LinearLayout
            android:id="@+id/white_background"
            android:layout_marginTop="180dp"
            android:orientation="vertical"
            android:background="@drawable/white_panel"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:layout_marginRight="30dp"
            app:layout_constraintLeft_toRightOf="@id/title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:src="@tools:sample/avatars" />

        <TextView
            style="@style/AppTheme.Body"
            android:id="@+id/body"
            android:text="@{fullBeerModel.description}"
            android:padding="@dimen/standard_margin"
            tools:text="@tools:sample/lorem"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>